ui: improve button state visibility

--- a/src/ui/component/common/Button.pug
+++ b/src/ui/component/common/Button.pug
@@ -45,6 +45,7 @@ style.
 	.button
 		align-items center
 		background var(--c-shade-weak)
+		border 1px solid transparent
 		border-radius 11px
 		display inline-flex
 		font-family var(--f-family-mono)
@@ -56,13 +57,15 @@ style.
 		user-select none
 		white-space nowrap
 		&.button-activated
-			background var(--c-shade-strong)
+			background none
+			border-color var(--c-text-weak)
+			cursor default
 		&:disabled
 		&.button-disabled
 			cursor auto
 			opacity 0.5
 		&:hover:not(.button-activated)
-			background var(--c-shade-strong)
+			border-color var(--c-text-weak)
 	.button-badge
 		border-radius 10px
 		background var(--c-blend-weak)
