ui: improve radial menu "X" visibility

--- a/src/ui/overlay/RadialMenuOverlay.pug
+++ b/src/ui/overlay/RadialMenuOverlay.pug
@@ -117,7 +117,7 @@ style.
 		&.radial-menu-icon-selected
 			font-size 2em
 	.radial-menu-icon-center
-		color salmon
+		color var(--c-con-strong)
 	.radial-menu-icon-east
 		left 100%
 	.radial-menu-icon-north
