ui: reduce excessive text contrast on very dark backgrounds

--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -56,7 +56,7 @@ body
 	--c-text-xfaint rgba(255,255,255,0.125)
 	--c-text-faint rgba(255,255,255,0.25)
 	--c-text-weak rgba(255,255,255,0.50)
-	--c-text-strong #e8e8e8
+	--c-text-strong #d8d8d8
 	--c-tint-normal rgba(255,255,255,0.125)
 	--f-wght-weak 400
 	--f-wght-normal 500
