ui: fix incorrect positioning of crosspost subreddit

--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -283,6 +283,8 @@ style.
 			bottom 100%
 			position absolute
 			width 100%
+		.post-and-comments-expanded .post-crosspost-link &
+			position initial
 	.post-comments
 		display flex
 		flex-flow column nowrap
