--- a/src/ui/component/feed/collection/CollectionAvatar.pug
+++ b/src/ui/component/feed/collection/CollectionAvatar.pug
@@ -22,6 +22,7 @@ style.
 	.collection-avatar
 		aspect-ratio 1
 		display inline-block
+		flex 0 0 auto
 		user-select none
 	.collection-avatar-image
 		border-radius 50%
