--- a/src/ui/overlay/NetworkStatusOverlay.pug
+++ b/src/ui/overlay/NetworkStatusOverlay.pug
@@ -57,13 +57,13 @@ slot
 	Popup(on:close={() => demo_mode_help_open = false})
 		h1#network-status-demo-info-header Demo mode
 		article#network-status-demo-info-body.md
-			p Due to new Reddit rules, this website can only serve data to about 5 users at a time. If more people are using the website, you may be unable to view data.
+			p Due to new Reddit rules, this website can only serve data to a few users at a time. If many people are using this website, you may be unable to view data.
 			details
 				summary How do I exit demo mode?
 				ol.network-status-demo-info-list
 					li Open the following page:
 						a(href='https://old.reddit.com/prefs/apps') old.reddit.com/prefs/apps
-					li Create an app:
+					li Register for your own personal "app" with Reddit:
 						ol.network-status-demo-info-list
 							li Enter whatever name and description you want for the app.
 							li Enter the highlighted values in the app configuration:
