--- a/src/ui/AppRoute.pug
+++ b/src/ui/AppRoute.pug
@@ -1,6 +1,7 @@
 script.
 	import api from '../api/index.js'
 	
+	import AppLogo from './component/common/AppLogo.pug'
 	import CollectionAvatar from './component/feed/collection/CollectionAvatar.pug'
 	import CollectionInfo from './component/feed/collection/CollectionInfo.pug'
 	import Feed from './component/feed/Feed.pug'
@@ -32,29 +33,12 @@ main#app-main-content
 				{#key post.focus_comment_parent_count}
 					Post(comments_sort={post.comments_sort} expanded={true} focus_comment_parent_count={post.focus_comment_parent_count} focus_comment_id={post.focus_comment_id} id={post.id})
 	{:else if feed}
-		#app-feed-content
-			{#key feed.collection_id}
-				{#key feed.multireddit_name}
-					{#key feed.subreddit_name}
-						{#key feed.user_name}
-							FeedSummary(collection_id={feed.collection_id} multireddit_name={feed.multireddit_name} subreddit_name={feed.subreddit_name} user_name={feed.user_name})
-			menu#app-feed-options
-				{#key feed.type}
-					{#key feed.subreddit_name}
-						FeedSortOptions(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name} wikipage_name={wiki?.page_name})
-				{#if feed.sort === 'search'}
-					{#key feed.subreddit_name}
-						FeedSearchOptions(multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} subreddit_name={feed.subreddit_name})
-			{#key feed.collection_id}
-				{#key feed.filter}
-					{#key feed.multireddit_name}
-						{#key feed.search_sort}
-							{#key feed.search_text}
-								{#key feed.sort}
-									{#key feed.subreddit_name}
-										{#key feed.time_range}
-											{#key feed.user_name}
-												Feed(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name})
+		{#if feed.subreddit_name && !feed.collection_id}
+			{#key feed.subreddit_name}
+				Feed(page_size={25} sort={feed.sort} subreddit_name={feed.subreddit_name} type='subreddit_comments')
+		{:else if feed.user_name && !feed.multireddit_name}
+			{#key feed.user_name}
+				Feed(page_size={25} type='user_comments' user_name={feed.user_name})
 {#if !wiki}
 	aside#app-secondary-content
 		{#if post?.id}
@@ -76,41 +60,44 @@ main#app-main-content
 nav#app-main-navigation
 	{#if feed}
 		menu#app-feed-navigation
-			{#if feed?.type === 'multireddit_posts' || feed?.type === 'subreddit_posts' || feed?.type === 'user_posts' || wiki?.page_name}
-				{#if feed.type === 'collection_posts'}
-					{#key feed.collection_id}
-						CollectionAvatar(id={feed.collection_id} size='large')
-				{#if feed.type === 'multireddit_posts'}
-					{#key feed.user_name}
-						{#key feed.multireddit_name}
-							MultiredditAvatar(multireddit_name={feed.multireddit_name} size='large' user_name={feed.user_name})
-				{:else if feed.type === 'subreddit_posts' || wiki?.page_name}
-					{#key feed.subreddit_name}
-						SubredditAvatar(name={feed.subreddit_name} size='large')
-				{:else if feed.type === 'user_posts'}
-					{#key feed.user_name}
-						UserAvatar(name={feed.user_name} size='large')
-		{#if post || wiki}
-			{#key feed.collection_id}
-				{#key feed.filter}
+			AppLogo
+			{#if feed.type === 'collection_posts'}
+				{#key feed.collection_id}
+					CollectionAvatar(id={feed.collection_id} size='large')
+			{:else if feed.type === 'multireddit_posts'}
+				{#key feed.user_name}
 					{#key feed.multireddit_name}
-						{#key feed.search_sort}
-							{#key feed.search_text}
-								{#key feed.sort}
-									{#key feed.subreddit_name}
-										{#key feed.time_range}
-											{#key feed.user_name}
-												Feed(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name})
+						MultiredditAvatar(multireddit_name={feed.multireddit_name} size='large' user_name={feed.user_name})
+			{:else if feed.type === 'subreddit_posts' || wiki?.page_name}
+				{#key feed.subreddit_name}
+					SubredditAvatar(name={feed.subreddit_name} size='large')
+			{:else if feed.type === 'user_posts'}
+				{#key feed.user_name}
+					UserAvatar(name={feed.user_name} size='large')
+		{#key feed.collection_id}
+			{#key feed.multireddit_name}
+				{#key feed.subreddit_name}
+					{#key feed.user_name}
+						FeedSummary(collection_id={feed.collection_id} multireddit_name={feed.multireddit_name} subreddit_name={feed.subreddit_name} user_name={feed.user_name})
+		menu#app-feed-options
+			FeedSortOptions(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name})
+			{#if feed.sort === 'search'}
+				{#key feed.subreddit_name}
+					FeedSearchOptions(multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} subreddit_name={feed.subreddit_name})
+		{#key feed.collection_id}
+			{#key feed.filter}
+				{#key feed.multireddit_name}
+					{#key feed.search_sort}
+						{#key feed.search_text}
+							{#key feed.sort}
+								{#key feed.subreddit_name}
+									{#key feed.time_range}
+										{#key feed.user_name}
+											Feed(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name})
 	{:else}
-		a(href='/')
-			img#app-home-icon(alt='Reddit logo' src='/reddit_logo.svg')
+		AppLogo
 
 style.
-	#app-feed-content
-		align-items flex-start
-		display flex
-		flex-flow column nowrap
-		gap 2em
 	#app-feed-navigation
 		align-items center
 		display flex
@@ -118,12 +105,10 @@ style.
 		justify-content flex-end
 	#app-feed-options
 		display flex
+		flex-flow column nowrap
 		gap 1em
-	#app-home-icon
-		aspect-ratio 1
-		height 64px
 	#app-main-content
-		padding 3em 0
+		padding 5em 0
 		width 480px
 	#app-main-navigation
 		align-items flex-end
@@ -132,26 +117,26 @@ style.
 		gap 2em
 		height 100dvh
 		overflow auto
-		padding 4.5em 0
+		padding 4em 1em
 		position fixed
-		right calc(50% + 315px)
+		right calc(50% + 300px)
 		scrollbar-width none
 		top 0
-		width 160px
+		width 190px
 		&::-webkit-scrollbar
 			display none
 		@media(min-width 1024px)
 			display flex
 	#app-secondary-content
 		display none
-		left calc(50% + 315px)
+		left calc(50% + 300px)
 		height 100dvh
 		overflow auto
-		padding 4.5em 0
+		padding 5em 1em
 		position fixed
 		scrollbar-width none
 		top 0
-		width 160px
+		width 190px
 		&::-webkit-scrollbar
 			display none
 		@media(min-width 1024px)
