--- a/src/ui/component/feed/FeedSearchOptions.pug
+++ b/src/ui/component/feed/FeedSearchOptions.pug
@@ -22,31 +22,42 @@ script.
 		{ label: 'Highest Score', value: 'top' }
 		{ label: 'Closest Match', value: 'relevance' }
 	]
+	subreddit_is_nsfw = false
 	subreddit_search_flair_widget = null
 	subreddit_search_picking_flair = false
 
-	if subreddit_name and !subreddit_search_flair_widget
-		api.loadWatch(api.ID('subreddit_widgets', subreddit_name), (x) ->
-			{ data: widgets } = x
-			subreddit_search_flair_widget = widgets?.sidebar.find((x) => x.kind == 'post-flair')
+	if subreddit_name
+		api.loadWatch(api.ID('subreddit', subreddit_name), (x) ->
+			{ data: subreddit } = x
+			if subreddit?.over18 then subreddit_is_nsfw = true
 		)
+		if !subreddit_search_flair_widget
+			api.loadWatch(api.ID('subreddit_widgets', subreddit_name), (x) ->
+				{ data: widgets } = x
+				subreddit_search_flair_widget = widgets?.sidebar.find((x) => x.kind == 'post-flair')
+			)
 
 menu.feed-options-search
-	Button(action={value => internal_navigate({ href: location.origin + format_url({ feed_search_sort: value, feed_search_text: search_text, feed_sort: 'search', multireddit_name, subreddit_name, user_name }) }) } options={search_sort_options} selected={search_sort})
-	{#key search_text}
-		TextInput(autofocus={true} enter_action={value => internal_navigate({ href: location.origin + format_url({ feed_search_sort: search_sort, feed_search_text: value, feed_sort: 'search', multireddit_name, subreddit_name, user_name }) }) } initial_value={search_text})
-	{#if subreddit_search_flair_widget}
-		Button(action={() => subreddit_search_picking_flair = true} text='Flairs...')
-		{#if subreddit_search_picking_flair}
-			<!-- svelte-ignore a11y-no-static-element-interactions -->
-			.feed-options-search-subreddit-flair-close-handler(on:click={() => subreddit_search_picking_flair = false} on:keydown={e => { if(e.key === 'Enter') { subreddit_search_picking_flair = false } } })
-				Popup(on:close={() => subreddit_search_picking_flair = false})
-					SubredditWidget(widget={subreddit_search_flair_widget})
+	{#if subreddit_is_nsfw}
+		.feed-options-search-impossible Reddit prohibits 3rd party apps from searching in NSFW subreddits.
+	{:else}
+		Button(action={value => internal_navigate({ href: location.origin + format_url({ feed_search_sort: value, feed_search_text: search_text, feed_sort: 'search', multireddit_name, subreddit_name, user_name }) }) } options={search_sort_options} selected={search_sort})
+		{#key search_text}
+			TextInput(autofocus={true} enter_action={value => internal_navigate({ href: location.origin + format_url({ feed_search_sort: search_sort, feed_search_text: value, feed_sort: 'search', multireddit_name, subreddit_name, user_name }) }) } initial_value={search_text})
+		{#if subreddit_search_flair_widget}
+			Button(action={() => subreddit_search_picking_flair = true} text='Flairs...')
+			{#if subreddit_search_picking_flair}
+				<!-- svelte-ignore a11y-no-static-element-interactions -->
+				.feed-options-search-subreddit-flair-close-handler(on:click={() => subreddit_search_picking_flair = false} on:keydown={e => { if(e.key === 'Enter') { subreddit_search_picking_flair = false } } })
+					Popup(on:close={() => subreddit_search_picking_flair = false})
+						SubredditWidget(widget={subreddit_search_flair_widget})
 
 style.
 	.feed-options-search
 		display flex
 		flex-flow inherit
 		gap 1em
+	.feed-options-search-impossible
+		color var(--c-text-weak)
 	.feed-options-search-subreddit-flair-close-handler
 		position absolute
