--- a/src/ui/component/feed/multireddit/MultiredditAvatar.pug
+++ b/src/ui/component/feed/multireddit/MultiredditAvatar.pug
@@ -22,6 +22,7 @@ style.
 	.multireddit-avatar
 		aspect-ratio 1
 		display inline-block
+		flex 0 0 auto
 		user-select none
 	.multireddit-avatar-image
 		border-radius 50%
